--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_CONNECT='mongodb+srv://ivan:ivan123@cluster0.sqga2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
+TOKEN_SECRET='kkndccndredalert'
