After affair restore

--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,7 @@
     "react-browser-router": "^2.1.2",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-    "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
